--- a/citations.bib
+++ b/citations.bib
@@ -254,13 +254,6 @@
 	date = {2024},
 }
 
-@unpublished{silver_lecture_nodate,
-	location = {Stanford University},
-	title = {Lecture 2: Markov Decision Processes},
-	url = {https://web.stanford.edu/class/cme241/lecture_slides/david_silver_slides/MDP.pdf},
-	author = {Silver, David},
-}
-
 @book{bishop_deep_2023,
 	title = {Deep learning: Foundations and concepts},
 	publisher = {Springer Nature},
@@ -362,4 +355,54 @@
 	author = {Arora, Saurabh and Doshi, Prashant},
 	date = {2021},
 	keywords = {Generalization, Learning accuracy, Learning from demonstration, Reinforcement learning, Reward function, Survey},
+}
+
+@misc{schulman_proximal_2017-1,
+	title = {Proximal Policy Optimization Algorithms},
+	url = {https://arxiv.org/abs/1707.06347},
+	author = {Schulman, John and Wolski, Filip and Dhariwal, Prafulla and Radford, Alec and Klimov, Oleg},
+	date = {2017},
+	note = {\_eprint: 1707.06347},
+}
+
+@misc{silver_lectures_2015,
+	title = {Lectures on Reinforcement Learning},
+	url = {https://www.davidsilver.uk/teaching/},
+	author = {Silver, David},
+	date = {2015},
+}
+
+@inproceedings{nesterov_method_1983,
+	title = {A method for unconstrained convex minimization problem with the rate of convergence O (1/k2)},
+	volume = {269},
+	pages = {543},
+	booktitle = {Dokl. Akad. Nauk. {SSSR}},
+	author = {Nesterov, Yurii},
+	date = {1983},
+	note = {Issue: 3},
+}
+
+@inproceedings{hutter_anymal_2016,
+	title = {{ANYmal} - a highly mobile and dynamic quadrupedal robot},
+	doi = {10.1109/IROS.2016.7758092},
+	pages = {38--44},
+	booktitle = {2016 {IEEE}/{RSJ} International Conference on Intelligent Robots and Systems ({IROS})},
+	author = {Hutter, Marco and Gehring, Christian and Jud, Dominic and Lauber, Andreas and Bellicoso, C. Dario and Tsounis, Vassilios and Hwangbo, Jemin and Bodie, Karen and Fankhauser, Peter and Bloesch, Michael and Diethelm, Remo and Bachmann, Samuel and Melzer, Amir and Hoepflinger, Mark},
+	date = {2016},
+	keywords = {Actuators, Dynamics, Legged locomotion, Robot sensing systems, Torque},
+}
+
+@inproceedings{schulman_trust_2015,
+	location = {Lille, France},
+	title = {Trust Region Policy Optimization},
+	volume = {37},
+	url = {https://proceedings.mlr.press/v37/schulman15.html},
+	series = {Proceedings of Machine Learning Research},
+	abstract = {In this article, we describe a method for optimizing control policies, with guaranteed monotonic improvement. By making several approximations to the theoretically-justified scheme, we develop a practical algorithm, called Trust Region Policy Optimization ({TRPO}). This algorithm is effective for optimizing large nonlinear policies such as neural networks. Our experiments demonstrate its robust performance on a wide variety of tasks: learning simulated robotic swimming, hopping, and walking gaits; and playing Atari games using images of the screen as input. Despite its approximations that deviate from the theory, {TRPO} tends to give monotonic improvement, with little tuning of hyperparameters.},
+	pages = {1889--1897},
+	booktitle = {Proceedings of the 32nd International Conference on Machine Learning},
+	publisher = {{PMLR}},
+	author = {Schulman, John and Levine, Sergey and Abbeel, Pieter and Jordan, Michael and Moritz, Philipp},
+	editor = {Bach, Francis and Blei, David},
+	date = {2015-07-07},
 }
