--- a/citations.bib
+++ b/citations.bib
@@ -387,9 +387,10 @@
 	doi = {10.1109/IROS.2016.7758092},
 	pages = {38--44},
 	booktitle = {2016 {IEEE}/{RSJ} International Conference on Intelligent Robots and Systems ({IROS})},
-	author = {Hutter, Marco and Gehring, Christian and Jud, Dominic and Lauber, Andreas and Bellicoso, C. Dario and Tsounis, Vassilios and Hwangbo, Jemin and Bodie, Karen and Fankhauser, Peter and Bloesch, Michael and Diethelm, Remo and Bachmann, Samuel and Melzer, Amir and Hoepflinger, Mark},
+	author = {Hutter, Marco and Jud, Dominic and Lauber, Andreas and Bellicoso, C. Dario and Tsounis, Vassilios and Hwangbo, Jemin and Bodie, Karen and Fankhauser, Peter and Bloesch, Michael and Diethelm, Remo and Bachmann, Samuel and Melzer, Amir and Hoepflinger, Mark},
 	date = {2016},
 	keywords = {Actuators, Dynamics, Legged locomotion, Robot sensing systems, Torque},
+	file = {PDF:/home/sky/Zotero/storage/UKL8ZVQ8/Hutter et al. - 2016 - ANYmal - a highly mobile and dynamic quadrupedal robot.pdf:application/pdf},
 }
 
 @inproceedings{schulman_trust_2015,
@@ -405,4 +406,40 @@
 	author = {Schulman, John and Levine, Sergey and Abbeel, Pieter and Jordan, Michael and Moritz, Philipp},
 	editor = {Bach, Francis and Blei, David},
 	date = {2015-07-07},
+}
+
+@article{apicella_survey_2021,
+	title = {A survey on modern trainable activation functions},
+	volume = {138},
+	issn = {0893-6080},
+	url = {https://www.sciencedirect.com/science/article/pii/S0893608021000344},
+	doi = {https://doi.org/10.1016/j.neunet.2021.01.026},
+	abstract = {In neural networks literature, there is a strong interest in identifying and defining activation functions which can improve neural network performance. In recent years there has been a renovated interest in the scientific community in investigating activation functions which can be trained during the learning process, usually referred to as trainable, learnable or adaptable activation functions. They appear to lead to better network performance. Diverse and heterogeneous models of trainable activation function have been proposed in the literature. In this paper, we present a survey of these models. Starting from a discussion on the use of the term “activation function” in literature, we propose a taxonomy of trainable activation functions, highlight common and distinctive proprieties of recent and past models, and discuss main advantages and limitations of this type of approach. We show that many of the proposed approaches are equivalent to adding neuron layers which use fixed (non-trainable) activation functions and some simple local rule that constrains the corresponding weight layers.},
+	pages = {14--32},
+	journaltitle = {Neural Networks},
+	author = {Apicella, Andrea and Donnarumma, Francesco and Isgrò, Francesco and Prevete, Roberto},
+	date = {2021},
+	keywords = {Activation functions, Learnable activation functions, Machine learning, Neural networks, Trainable activation functions},
+}
+
+@misc{nwankpa_activation_2018,
+	title = {Activation Functions: Comparison of trends in Practice and Research for Deep Learning},
+	url = {https://arxiv.org/abs/1811.03378},
+	author = {Nwankpa, Chigozie and Ijomah, Winifred and Gachagan, Anthony and Marshall, Stephen},
+	date = {2018},
+	note = {\_eprint: 1811.03378},
+}
+
+@article{dubey_activation_2022,
+	title = {Activation functions in deep learning: A comprehensive survey and benchmark},
+	volume = {503},
+	issn = {0925-2312},
+	url = {https://www.sciencedirect.com/science/article/pii/S0925231222008426},
+	doi = {https://doi.org/10.1016/j.neucom.2022.06.111},
+	abstract = {Neural networks have shown tremendous growth in recent years to solve numerous problems. Various types of neural networks have been introduced to deal with different types of problems. However, the main goal of any neural network is to transform the non-linearly separable input data into more linearly separable abstract features using a hierarchy of layers. These layers are combinations of linear and nonlinear functions. The most popular and common non-linearity layers are activation functions ({AFs}), such as Logistic Sigmoid, Tanh, {ReLU}, {ELU}, Swish and Mish. In this paper, a comprehensive overview and survey is presented for {AFs} in neural networks for deep learning. Different classes of {AFs} such as Logistic Sigmoid and Tanh based, {ReLU} based, {ELU} based, and Learning based are covered. Several characteristics of {AFs} such as output range, monotonicity, and smoothness are also pointed out. A performance comparison is also performed among 18 state-of-the-art {AFs} with different networks on different types of data. The insights of {AFs} are presented to benefit the researchers for doing further research and practitioners to select among different choices. The code used for experimental comparison is released at: https://github.com/shivram1987/{ActivationFunctions}.},
+	pages = {92--108},
+	journaltitle = {Neurocomputing},
+	author = {Dubey, Shiv Ram and Singh, Satish Kumar and Chaudhuri, Bidyut Baran},
+	date = {2022},
+	keywords = {Neural networks, Activation Functions, Convolutional neural networks, Deep learning, Overview, Recurrent Neural Networks},
 }
